--- a/app/build.gradle
+++ b/app/build.gradle
@@ -27,6 +27,14 @@ dependencies {
     androidTestImplementation 'com.android.support.test:runner:1.0.2'
     androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.2'
     // Implement library
+    // Slider layout add library
+    implementation 'com.android.support:support-v4:28.+'
+    implementation 'com.squareup.picasso:picasso:2.5.2'
+    implementation 'com.nineoldandroids:library:2.4.0'
+    implementation 'com.daimajia.slider:library:1.1.5@aar'
+    // RxJava
+    implementation 'io.reactivex.rxjava2:rxandroid:2.0.1'
+    implementation 'io.reactivex.rxjava2:rxjava:2.1.7'
     // Stylesabletoast 
     implementation 'com.muddzdev:styleabletoast:2.0.1'
     implementation 'com.android.support:cardview-v7:28.0.0'
@@ -36,6 +44,7 @@ dependencies {
     implementation 'com.github.d-max:spots-dialog:1.1@aar'
     implementation 'com.squareup.retrofit2:retrofit:2.5.0'
     implementation 'com.squareup.retrofit2:converter-gson:2.5.0'
+    implementation 'com.squareup.retrofit2:adapter-rxjava2:2.3.0'
     // Facebook library
     implementation 'com.facebook.android:account-kit-sdk:4.+'
 }
